--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1> Teste do github.io <h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>Teste de github.io</p>
+    </body>
+</html>
